# cargo-nx

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
default/lib/: Cargo.toml
default/lib/src/: lib.rs
default/nro/: Cargo.toml
default/nro/src/: main.rs
default/nsp/: Cargo.toml  npdm.json
default/nsp/src/: main.rs
default/specs/: aarch64-nintendo-switch.ld  aarch64-none-elf.json  armv7-nintendo-switch.json  armv7-nintendo-switch.ld
default_specs/: aarch64-none-elf.json
src/: args.rs  build.rs  link.rs  main.rs  new.rs
tools/netloader/: Cargo.toml
tools/netloader/src/: lib.rs  loader.rs  stdio.rs
tools/netloader/src/loader/: discovery.rs  send.rs
