[package]
name = "cargo-nx"
version = "0.1.0"
authors = ["XorTroll"]
license = "MIT"
homepage = "https://github.com/aarch64-switch-rs/"
repository = "https://github.com/aarch64-switch-rs/cargo-nx/"
edition = "2018"
description = "Cargo subcommand to simplify creating and building Nintendo Switch homebrew projects"

[dependencies]
clap = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
cargo_metadata = { version = "0.12.0" }
linkle = { git = "https://github.com/XorTroll/linkle", branch = "npdm" }