[package]
name = "cargo-nx"
version = "0.2.0"
authors = ["XorTroll"]
license = "MIT"
homepage = "https://github.com/aarch64-switch-rs/"
repository = "https://github.com/aarch64-switch-rs/cargo-nx/"
edition = "2021"
description = "Cargo subcommand to simplify creating and building Nintendo Switch homebrew projects"

[dependencies]
rand = "0.8.5"
chrono = "0.4"
thiserror = "1.0"
num-bigint = "0.4"
cipher = "0.4"
clap = { version = "3", features = ["derive"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
cargo_metadata = { version = "0.12.0" }
linkle = { git = "https://github.com/XorTroll/linkle", branch = "npdm" }
