[package]
name = "<name>"
authors = ["<author>"]
version = "<version>"
edition = "<edition>"

[dependencies]
nx = { git = "https://github.com/aarch64-switch-rs/nx" }

# For help / more information, see https://github.com/aarch64-switch-rs/cargo-nx/wiki

[package.metadata.nx.nro.nacp]
default_name = "<name>"
default_author = "<author>"
version = "<version>"
application_id = "0x0100AAAABBBBCCCC"